# mio

./: .gitignore  Cargo.toml  LICENSE  README.md  build.js  config.js  index.html  index.js  io.js  main.js  menu.js  mio.toml.example  package-lock.json  package.json  renderer.js  tray.js  worker.js
assets/: icon.ai  icon.psd  style.css
examples/: arduino_basic.ino
src/: app.rs  config.rs  headless.rs  lib.rs  main.rs  protocol.rs  serial.rs
src/bridge/: keyboard.rs  midi.rs  mod.rs  mouse.rs  osc.rs  websocket.rs
src/tui/: event.rs  layout.rs  mod.rs  widgets.rs
tests/: protocol_tests.rs
